<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Training</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnName_Dateizugriff">Dateizugriff</string>
    <string name="Dateisystem">Dateisystem</string>
    <string name="btnName_Speichern">Datei Speichern</string>
    <string name="btnName_Laden">Datei laden</string>
    <string name="Content_head">Kontakte</string>
    <string name="List_name">Liste</string>
    <string name="btnContact_Name">Kontakte lesen</string>
    <string name="SimName">Simkarte Kontakte</string>
    <string name="btnSim_name">Sim Kontakte auslesen</string>
    <string name="sim_details">Sim Detailansicht</string>
    <string name="empty_sim_contact_phone_number">empty</string>
    <string name="empty_sim_contact_name">Unknown</string>
    <string name="single_row_img_desc"/>
    <string name="menu_open">Menü öffnen</string>
    <string name="menu_closed">Menü schließen</string>
    
    <string-array name="menu">
        <item>Hauptmenu</item>
        <item>Sim Kontakte</item>
        <item>Kontakte</item>
    </string-array> 

</resources>
