<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:text="@string/Dateisystem"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLaden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="0.73"
            android:onClick="onButtonClick"
            android:text="@string/btnName_Laden" />

        <Button
            android:id="@+id/btnSpeichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:onClick="onButtonClick"
            android:text="@string/btnName_Speichern" />

    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:ems="10"
        android:inputType="" >
    </EditText>

</LinearLayout>
