<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.training.training.MainActivity" 
    android:background="#FF8800">

    <Button
        android:id="@+id/btnDateizugriff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onButtonClick"
        android:text="@string/btnName_Dateizugriff" />

    <Button
        android:id="@+id/btnReadContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDateizugriff"
        android:layout_alignRight="@+id/btnDateizugriff"
        android:layout_below="@+id/btnDateizugriff"
        android:layout_marginTop="16dp"
        android:onClick="onButtonClick"
        android:text="@string/btnContact_Name" />

    <Button
        android:id="@+id/btnReadSim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnReadContact"
        android:layout_alignRight="@+id/btnReadContact"
        android:layout_below="@+id/btnReadContact"
        android:onClick="onButtonClick"
        android:text="@string/btnSim_name" />

    <Button
        android:id="@+id/btnAddSim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnReadSim"
        android:layout_below="@+id/btnReadSim"
        android:layout_marginTop="15dp"
        android:onClick="onButtonClick"
        android:text="+ Sim Kontakt " />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAddSim"
        android:layout_alignRight="@+id/btnAddSim"
        android:layout_below="@+id/btnAddSim"
        android:layout_marginTop="15dp"
        android:onClick="onButtonClick"
        android:text="Menu" />

</RelativeLayout>
